# Public_Ledger_For_Auctions

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  runner.sh
auction/: Cargo.toml
auction/src/: main.rs  transactions.rs  users.rs
auction_app/: Cargo.toml  auction_data.json  users.json  users_bk.json
auction_app/src/: auction.rs  auction_client.rs  main.rs  sshkey.txt  transactions.rs  user.rs
auction_refactor/: Cargo.toml  auction_data.json  users.json
auction_refactor/src/: auction.rs  main.rs  user.rs
auctions_pub_ledger/: Cargo.toml  Dockerfile  auction_data.json  blockchain.json  builders.rs  users.json
auctions_pub_ledger/auction-UI/: app.py
auctions_pub_ledger/auction-UI/css/: style.css
auctions_pub_ledger/auction-UI/javascript/: script.js
auctions_pub_ledger/auction-UI/templates/: home.html  login.html
auctions_pub_ledger/auctions/: auction_data.json
auctions_pub_ledger/proto/: auctions.proto  blockchain.proto  kademlia.proto  notification.proto
auctions_pub_ledger/src/: blockchain.rs  lib.rs  main.rs
auctions_pub_ledger/src/auction_app/: auction.rs  auction_client.rs  main.rs  mod.rs  user.rs
auctions_pub_ledger/src/auction_app/auction_operation/: client.rs  server.rs
auctions_pub_ledger/src/auction_app/notifications/: mod.rs  notify_client.rs  notify_server.rs
auctions_pub_ledger/src/auction_server/: auction_handler.rs  auction_server.rs  auction_validator.rs  blockchain.rs  blockchain_operator.rs  blockchain_pos.rs  blockchain_pow.rs  helper.rs  mod.rs  server.rs
auctions_pub_ledger/src/auction_server/blockchain_operation/: client.rs  server.rs
auctions_pub_ledger/src/cryptography/: ecdsa_keys.rs  mod.rs
auctions_pub_ledger/src/kademlia_node_search/: client.rs  main.rs  mod.rs  node.rs  readme.md
auctions_pub_ledger/src/kademlia_node_search/node_functions/: client.rs  crypto.rs  mod.rs  request_handler.rs  routing_table.rs
auctions_pub_ledger/tls/: cert.conf  csr.conf  rootCA.crt  rootCA.key  rootCA.srl  server.crt  server.csr  server.key
docs/: key_basis.md
infra/: cloud_configuration.yml
infra/ansible/: ansible.cfg
infra/ansible/auctions_config/: build.yaml  config.yaml  init.yaml
infra/ansible/build_project/: config_auctions.yaml  main.yaml  ssh_keys.yaml  tls.yaml
infra/ansible/inventory/: inventory.gcp.yml
infra/terraform/: env.tfvars  executor.sh
infra/terraform/base/: locals.tf  main.tf
infra/terraform/common/: data.tf  providers.tf  tfstate_backend.tf  variables.tf
infra/terraform/modules/gcp/compute/private_vm/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/gcp/compute/public_vm/: main.tf  variables.tf
infra/terraform/modules/gcp/compute/storage/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/gcp/firewall_rules/: main.tf  variables.tf
infra/terraform/modules/gcp/network/nat/: main.tf  variables.tf
infra/terraform/modules/gcp/network/subnet/: main.tf  variables.tf
infra/terraform/modules/gcp/network/vpc/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/gcp/storage_bucket/: main.tf  variables.tf
infra/terraform/tf_state_bucket/: main.tf  variables.tf
kademlia_node_search/: Cargo.toml  build.rs  create_nodes.sh  delete_nodes.sh  latency_script.sh  readme.md
kademlia_node_search/proto/: kademlia.proto
kademlia_node_search/src/: client.rs  config.rs  main.rs  node.rs
kademlia_node_search/src/node/: client.rs  config.rs  crypto.rs  request_handler.rs  routing_table.rs
public_ledger/: Cargo.toml  blockchain.txt
public_ledger/src/: blockchain.rs  blockchain.txt  helper.rs  main.rs  main1.rs  transactions.rs
public_ledger_for_auctions/: Cargo.toml
public_ledger_for_auctions/src/: blockchain.rs  main.rs
