[package]
name = "auction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
futures = "0.3"
async-std = "1.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
[[bin]]
name="auction_app"
path="src/main.rs"
#[[bin]]
#name="auction_client"
#path="src/auction_client.rs"   
