[package]
name = "auctions_pub_ledger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha256 = "1.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0" }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
local-ip-address = "0.6.1"
async-std = "1.9"
hex = "0.4.3"
rand_core = "0.6.3"
p256 = "0.13.2"
ecdsa = "0.14.1"
elliptic-curve = "0.13.8"
rand = "0.9.0-alpha.1"
secp256k1 = "0.23.0"
k256 = "0.13.3"
[[bin]]
name = "main"
path = "src/main.rs"
[[bin]]
name = "auction"
path = "src/auction_app/main.rs"
