[package]
name = "auctions_pub_ledger"
version = "0.1.0"
edition = "2021"

build = "builders.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha256 = "1.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0" }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
local-ip-address = "0.6.1"
async-std = "1.9"
hex = "0.4.3"
rand_core = "0.6.3"
p256 = "0.13.2"
ecdsa = "0.14.1"
elliptic-curve = "0.13.8"
rand = "0.9.0-alpha.1"
secp256k1 = "0.23.0"
k256 = "0.13.3"
tonic = { version = "0.11.0", features = ["transport", "tls"] }
prost = "0.12.3"
rand_distr = "0.4"
clap = "3.2.8"
bytes = "1.6.0"
tokio-rustls = { version = "0.24.0", optional = true }
hyper-rustls = { version = "0.24.0", features = ["http2"], optional = true }
rustls-pemfile = { version = "1", optional = true }
[build-dependencies]
tonic-build = "0.11.0"

[[bin]]
name = "main"
path = "src/main.rs"
[[bin]]
name = "auction"
path = "src/auction_app/main.rs"
