[package]
name = "kademlia_node_search"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tonic = "0.11.0"
prost = "0.12.3"
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
rand = "0.8"
rand_distr = "0.4"
clap = "4.5.4"
bytes = "1.6.0"
rand_chacha = "0.3.1"
colored = "2.0"
hex = "0.4"

[build-dependencies]
tonic-build = "0.11.0"