[package]
name = "public_ledger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto-hash = "0.3.3"
hex = "0.3.2"
chrono = "0.4"
sha2 = "0.10"
prost-derive = "0.10"
tokio = { version = "1", features = ["full"] }
tonic = "0.5"
prost = "0.9"
prost-types = "0.9"
io = "0.0.2"
local-ip-address = "0.6.1"
futures = "0.3"
async-std = "1.9"
tower = "0.4.13"
mini-redis = "0.4.1"
serde = { version = "1", features = ["derive"] }
serde_json = {version = "1.0"}

[build-dependencies]
tonic-build = "0.5"

[[bin]]
name="blockchain_operator"
path="src/main.rs"
[[bin]]
name="tx"
path="src/transactions.rs"
